[package]
name = "maxapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.14.10"

[features]
no_entrypoint = [ ]
# cargo test
# cargo build/cargo run
# cargo test
# #[cfg("no-entrypoint")]
# mod MyDate

[dev-dependencies]
solana-program-test = "1.14.10"
solana-sdk = "1.14.10"

[lib]
crate-type=["cdylib","lib"]
